Fixed css spacing issues.

--- a/Sports_Altitude_Dashboard/static/css/style.css
+++ b/Sports_Altitude_Dashboard/static/css/style.css
@@ -22,6 +22,7 @@ body {
   position: relative;
   height: inherit; 
   width: inherit;
+  margin: 0 auto 35px auto;
   
 }
 #graph1 {
